modified the name for the question, answer, and idea boxes

--- a/ExampleDraft/preamble.tex
+++ b/ExampleDraft/preamble.tex
@@ -20,11 +20,11 @@
 
 % Define colored boxes
 \newmdenv[innerlinewidth=0.5pt, roundcorner=4pt,linecolor=red!40,backgroundcolor=red!10,innerleftmargin=6pt,
-innerrightmargin=6pt,innertopmargin=0pt,innerbottommargin=\topsep]{questionbox}
+innerrightmargin=6pt,innertopmargin=0pt,innerbottommargin=\topsep]{redbox}
 \newmdenv[innerlinewidth=0.5pt, roundcorner=4pt,linecolor=emeraldgreen,backgroundcolor=lightgreen,innerleftmargin=6pt,
-innerrightmargin=6pt,innertopmargin=0pt,innerbottommargin=\topsep]{answerbox}
+innerrightmargin=6pt,innertopmargin=0pt,innerbottommargin=\topsep]{greenbox}
 \newmdenv[innerlinewidth=0.5pt, roundcorner=4pt,linecolor=yellow,backgroundcolor=yellow!25,innerleftmargin=6pt,
-innerrightmargin=6pt,innertopmargin=6pt,innerbottommargin=6pt]{ideabox}
+innerrightmargin=6pt,innertopmargin=6pt,innerbottommargin=6pt]{yellowbox}
 % The inner margins are set this way to be harmonious with the amsthm environments I created
 
 % Mathematics and code
