test of credential storing

--- a/ExampleDraft/preamble.tex
+++ b/ExampleDraft/preamble.tex
@@ -99,4 +99,4 @@ innerrightmargin=6pt,innertopmargin=6pt,innerbottommargin=6pt]{yellowbox}
 % Subfile (last)
 \usepackage{subfiles}
 
-\endinput % To close this file
+\endinput
