polished main.tex

--- a/ExampleDraft/main.tex
+++ b/ExampleDraft/main.tex
@@ -1,33 +1,19 @@
-\documentclass[11pt]{article}  % or report
+\documentclass[11pt]{article}
 
 % Preamble
 \input{preamble.tex}
-
-% Custom commands
 \input{commands.tex}
-
-% Title page
 \title{Title}
 \author{Leonardo Martins Bianco}
-\date{ }  % Omits date
-
+\date{ }  % (omits date)
 
 \begin{document}
-
-% Title page, abstract, ToC
 \maketitle
-%\begin{abstract}
-%	This is the abstract.
-%\end{abstract}
-%\tableofcontents
-
 % Content
 \subfile{sections/section}
-
 % Bibliography
-\clearpage  % Separate page for bibliography
-\nocite{*}  % Cites all entries in references.bib
+\clearpage
+\nocite{*}  % (cites all entries in references.bib)
 \bibliographystyle{plain}
 \bibliography{references}
-
 \end{document}
