renamed and reorganized report and beamer classes

--- a/article/main.tex
+++ b/article/main.tex
@@ -5,15 +5,15 @@
 \input{commands.tex}
 \title{Title}
 \author{Leonardo Martins Bianco}
-\date{ }  % (omits date)
+\date{ }
 
 \begin{document}
 \maketitle
 % Content
-\subfile{sections/section}
+\subfile{sections/}
 % Bibliography
 \clearpage
-\nocite{*}  % (cites all entries in references.bib)
+\nocite{*}  % cites all entries in references.bib
 \bibliographystyle{plain}
 \bibliography{references}
 \end{document}
