brushed up the preamble and main

--- a/report/main.tex
+++ b/report/main.tex
@@ -6,7 +6,7 @@
 \title{Title}
 \author{Leonardo Martins Bianco}
 \date{ }
-%\includeonly{chapters/}  % selective compilation
+%\includeonly{chapters/}
 
 \begin{document}
 \maketitle
@@ -15,7 +15,7 @@
 \include{chapters/}
 % Bibliography
 \clearpage
-\nocite{*}  % cites all entries in references.bib
+\nocite{*}
 \bibliographystyle{plain}
 \bibliography{references}
 \end{document}
