brushed up preamble and main

--- a/article/main.tex
+++ b/article/main.tex
@@ -13,7 +13,7 @@
 \subfile{sections/}
 % Bibliography
 \clearpage
-\nocite{*}  % cites all entries in references.bib
+\nocite{*}
 \bibliographystyle{plain}
 \bibliography{references}
 \end{document}
