--- a/report/preamble.tex
+++ b/report/preamble.tex
@@ -13,6 +13,7 @@
 \usepackage{flexisym}  % recommended for breqn below
 \usepackage{breqn}  % breaking long equations, load it before amssymb
 \usepackage{amsthm,amsmath, amssymb}
+\usepackage{mathtools}
 \usepackage{mathrsfs}  % \mathscr command
 \usepackage{algorithm}
 \usepackage{algpseudocode}
