--- a/report/preamble.tex
+++ b/report/preamble.tex
@@ -10,10 +10,10 @@
 \usepackage[section]{placeins}  % figures stay in section
 
 % Mathematics and code
-\usepackage{flexisym}  % recommended for breqn below
-\usepackage{breqn}  % breaking long equations, load it before amssymb
 \usepackage{amsthm,amsmath, amssymb}
 \usepackage{mathtools}
+\usepackage{flexisym}  % for breqn below
+\usepackage{breqn}  % breaking long equations, dmath environment
 \usepackage{mathrsfs}  % \mathscr command
 \usepackage{algorithm}
 \usepackage{algpseudocode}
