added bm package for bold greek math in article and report latex templates

--- a/article/preamble.tex
+++ b/article/preamble.tex
@@ -12,6 +12,7 @@
 % Mathematics and code
 \usepackage{amsthm,amsmath, amssymb}
 \usepackage{mathtools}
+\usepackage{bm}  % for bold greek math
 \usepackage{flexisym}  % for breqn below
 \usepackage{breqn}  % breaking long equations, dmath environment
 \usepackage{mathrsfs}  % \mathscr command
