--- a/article/preamble.tex
+++ b/article/preamble.tex
@@ -1,5 +1,5 @@
 % Graphics
-\usepackage{xcolor}
+\usepackage[table,xcdraw]{xcolor}
 \usepackage{graphicx}
 \usepackage{tikz}
 \usetikzlibrary{
@@ -8,6 +8,14 @@
 \usepackage{caption}
 \usepackage{subcaption}  % grids of images
 \usepackage[section]{placeins}  % figures stay in section
+% For wider text, uncomment below
+% \usepackage{geometry}
+% \geometry{
+% left=16mm,
+% top=30mm,
+% right=16mm,
+% bottom=30mm
+% }
 
 % Mathematics and code
 \usepackage{amsthm,amsmath, amssymb}
@@ -32,12 +40,14 @@
 \theoremstyle{remark}
 \newtheorem*{remark}{Remark}
 
-% Fonts, symbols, languages
+% Fonts, symbols, languages, tables
 \usepackage[utf8]{inputenc}
 \usepackage{enumerate}  % Custom numbered items, such as steps 1, 2, etc.
 \usepackage{enumitem}  % Ordinals
 \usepackage{moreenum}
 \usepackage{verbatim}
+\usepackage{booktabs}  % better tables
+\usepackage{multirow}  % merging cells in tables
 
 % References and links
 \usepackage{hyperref}
