added adjustbox to preamble, which makes tables fit the page

--- a/article/preamble.tex
+++ b/article/preamble.tex
@@ -48,6 +48,7 @@
 \usepackage{verbatim}
 \usepackage{booktabs}  % better tables
 \usepackage{multirow}  % merging cells in tables
+\usepackage{adjustbox}  % make tables fit the page
 
 % References and links
 \usepackage{hyperref}
