changed citation color to blue

--- a/article/preamble.tex
+++ b/article/preamble.tex
@@ -56,7 +56,8 @@
     colorlinks=true,
     linkcolor=blue,
     filecolor=magenta,
-    urlcolor=cyan
+    urlcolor=cyan,
+    citecolor=blue,
     }
 \usepackage{url}
 
