changed bibliography to biblatex

--- a/article/main.tex
+++ b/article/main.tex
@@ -3,6 +3,7 @@
 % Preamble
 \input{preamble.tex}
 \input{commands.tex}
+\addbibresource{references.bib}
 \title{Title}
 \author{Leonardo Martins Bianco}
 \date{ }
@@ -16,7 +17,5 @@
 \input{sections/}
 % Bibliography
 \clearpage
-\nocite{*}
-\bibliographystyle{plain}
-\bibliography{references}
+\printbibliography
 \end{document}
