--- a/article/preamble.tex
+++ b/article/preamble.tex
@@ -18,7 +18,7 @@
 % }
 
 % Mathematics and code
-\usepackage{amsthm,amsmath, amssymb}
+\usepackage{amsthm,amsmath,amssymb}
 \usepackage{mathtools}
 \usepackage{bm}  % for bold greek math
 \usepackage{flexisym}  % for breqn below
@@ -60,5 +60,6 @@
     citecolor=blue,
     }
 \usepackage{url}
+\usepackage[style=alphabetic]{biblatex}
 
 \endinput
