removed breqn package and added pazo font

--- a/article/preamble.tex
+++ b/article/preamble.tex
@@ -18,11 +18,8 @@
 % }
 
 % Mathematics and code
-\usepackage{amsthm,amsmath, amssymb}
-\usepackage{mathtools}
+\usepackage{mathtools,amsthm,amssymb}
 \usepackage{bm}  % for bold greek math
-\usepackage{flexisym}  % for breqn below
-\usepackage{breqn}  % breaking long equations, dmath environment
 \usepackage{mathrsfs}  % \mathscr command
 \usepackage{algorithm}
 \usepackage{algpseudocode}
@@ -49,6 +46,8 @@
 \usepackage{booktabs}  % better tables
 \usepackage{multirow}  % merging cells in tables
 \usepackage{adjustbox}  % make tables fit the page
+% To change font, uncomment below
+\usepackage{newpxtext,newpxmath}
 
 % References and links
 \usepackage{hyperref}
