back to default latex font in article

--- a/article/preamble.tex
+++ b/article/preamble.tex
@@ -7,7 +7,7 @@
 }
 \usepackage{caption}
 \usepackage{subcaption}  % grids of images
-\usepackage[section]{placeins}  % figures stay in section
+\usepackage[section]{placeins}  % figures stay in section: can mess up conference templates!
 % For wider text, uncomment below
 % \usepackage{geometry}
 % \geometry{
@@ -47,7 +47,7 @@
 \usepackage{multirow}  % merging cells in tables
 \usepackage{adjustbox}  % make tables fit the page
 % To change font, uncomment below
-\usepackage{newpxtext,newpxmath}
+% \usepackage{newpxtext,newpxmath}
 
 % References and links
 \usepackage{hyperref}
