made abstract optional in article

--- a/article/main.tex
+++ b/article/main.tex
@@ -10,8 +10,8 @@
 \begin{document}
 % Title
 \maketitle
-\begin{abstract}
-\end{abstract}
+%\begin{abstract}
+%\end{abstract}
 % Content
 \input{sections/}
 % Bibliography
