--- a/article_detailed/preamble.tex
+++ b/article_detailed/preamble.tex
@@ -48,6 +48,8 @@
 \usepackage{adjustbox}  % make tables fit the page
 % To change font, uncomment below
 % \usepackage{newpxtext,newpxmath}
+% To remove paragraph indentation globally, uncomment below
+% \setlength{\parindent}{0pt}
 
 % References and links
 \usepackage{hyperref}
