--- a/article/preamble.tex
+++ b/article/preamble.tex
@@ -1,4 +1,4 @@
-% Graphics
+% ---- GRAPHICS AND GEOMETRY ----
 \usepackage[table,xcdraw]{xcolor}
 \usepackage{graphicx}
 \usepackage{tikz}
@@ -17,14 +17,14 @@
 % bottom=30mm
 % }
 
-% Mathematics and code
+
+% ---- MATHEMATICS ----
 \usepackage{mathtools,amsthm,amssymb}
 \usepackage{bm}  % for bold greek math
 \usepackage{mathrsfs}  % \mathscr command
-\usepackage{algorithm}
-\usepackage{algpseudocode}
 \usepackage{thmtools}  % theorem, definition, and question lists
 
+% Mathematics environments
 \theoremstyle{plain}
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{proposition}[theorem]{Proposition}
@@ -37,7 +37,112 @@
 \theoremstyle{remark}
 \newtheorem*{remark}{Remark}
 
-% Fonts, symbols, languages, tables
+
+% ---- CODE ----
+\usepackage{algorithm}
+\usepackage{algpseudocode}
+\usepackage{listings}
+
+% Custom listings languages
+\lstdefinelanguage{JavaScript}{
+  morekeywords=[1]{break, continue, delete, else, for, function, if, in,
+    new, return, this, typeof, var, void, while, with},
+  % Literals, primitive types, and reference types.
+  morekeywords=[2]{false, null, true, boolean, number, undefined,
+    Array, Boolean, Date, Math, Number, String, Object},
+  % Built-ins.
+  morekeywords=[3]{eval, parseInt, parseFloat, escape, unescape},
+  sensitive,
+  morecomment=[s]{/*}{*/},
+  morecomment=[l]//,
+  morecomment=[s]{/**}{*/}, % JavaDoc style comments
+  morestring=[b]',
+  morestring=[b]"
+}[keywords, comments, strings]
+
+% Custom listings styles
+% For Python
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
+\lstdefinestyle{PythonBase}{
+    backgroundcolor=\color{backcolour},   
+    commentstyle=\color{codegreen},
+    keywordstyle=\color{magenta},
+    numberstyle=\tiny\color{codegray},
+    stringstyle=\color{codepurple},
+    basicstyle=\ttfamily\footnotesize,
+    breakatwhitespace=false,         
+    breaklines=true,                 
+    captionpos=b,                    
+    keepspaces=true,                 
+    numbers=left,                    
+    numbersep=5pt,                  
+    showspaces=false,                
+    showstringspaces=false,
+    showtabs=false,                  
+    tabsize=2
+}
+
+\lstdefinestyle{Python}{
+  language=Python,
+  style=PythonBase
+}
+
+% For JavaScript
+\definecolor{mediumgray}{rgb}{0.3, 0.4, 0.4}
+\definecolor{mediumblue}{rgb}{0.0, 0.0, 0.8}
+\definecolor{forestgreen}{rgb}{0.13, 0.55, 0.13}
+\definecolor{darkviolet}{rgb}{0.58, 0.0, 0.83}
+\definecolor{royalblue}{rgb}{0.25, 0.41, 0.88}
+\definecolor{crimson}{rgb}{0.86, 0.8, 0.24}
+
+\lstdefinestyle{JSES6Base}{
+  backgroundcolor=\color{white},
+  basicstyle=\ttfamily,
+  breakatwhitespace=false,
+  breaklines=false,
+  captionpos=b,
+  columns=fullflexible,
+  commentstyle=\color{mediumgray}\upshape,
+  emph={},
+  emphstyle=\color{crimson},
+  extendedchars=true,  % requires inputenc
+  fontadjust=true,
+  frame=single,
+  identifierstyle=\color{black},
+  keepspaces=true,
+  keywordstyle=\color{mediumblue},
+  keywordstyle={[2]\color{darkviolet}},
+  keywordstyle={[3]\color{royalblue}},
+  numbers=left,
+  numbersep=5pt,
+  numberstyle=\tiny\color{black},
+  rulecolor=\color{black},
+  showlines=true,
+  showspaces=false,
+  showstringspaces=false,
+  showtabs=false,
+  stringstyle=\color{forestgreen},
+  tabsize=2,
+  title=\lstname,
+  upquote=true  % requires textcomp
+}
+
+\lstdefinestyle{JavaScript}{
+  language=JavaScript,
+  style=JSES6Base
+}
+
+\lstdefinestyle{ES6}{
+  language=ES6,
+  style=JSES6Base
+}
+
+
+% ---- FONTS, SYMBOLS, LANGUAGES, TABLES ----
 \usepackage[utf8]{inputenc}
 \usepackage{enumerate}  % Custom numbered items, such as steps 1, 2, etc.
 \usepackage{enumitem}  % Ordinals
@@ -46,13 +151,18 @@
 \usepackage{booktabs}  % better tables
 \usepackage{multirow}  % merging cells in tables
 \usepackage{adjustbox}  % make tables fit the page
+
 % To change font, uncomment below
 % \usepackage{newpxtext,newpxmath}
+
 % To remove paragraph indentation globally, uncomment below
 % \setlength{\parindent}{0pt}
 
-% References and links
+
+% ---- REFERENCES AND LINKS ----
 \usepackage{hyperref}
+\usepackage{url}
+
 \hypersetup{
     colorlinks=true,
     linkcolor=blue,
@@ -60,6 +170,5 @@
     urlcolor=cyan,
     citecolor=blue,
     }
-\usepackage{url}
 
 \endinput
