--- a/article/preamble.tex
+++ b/article/preamble.tex
@@ -61,7 +61,7 @@
 }[keywords, comments, strings]
 
 % Custom listings styles
-% For Python
+% Python
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
 \definecolor{codepurple}{rgb}{0.58,0,0.82}
@@ -91,7 +91,7 @@
   style=PythonBase
 }
 
-% For JavaScript
+% JavaScript and HTML
 \definecolor{mediumgray}{rgb}{0.3, 0.4, 0.4}
 \definecolor{mediumblue}{rgb}{0.0, 0.0, 0.8}
 \definecolor{forestgreen}{rgb}{0.13, 0.55, 0.13}
@@ -138,6 +138,11 @@
 
 \lstdefinestyle{ES6}{
   language=ES6,
+  style=JSES6Base
+}
+
+\lstdefinestyle{HTML}{
+  language=HTML,
   style=JSES6Base
 }
 
