add - soul package to preamble

--- a/article/preamble.tex
+++ b/article/preamble.tex
@@ -159,6 +159,7 @@
 
 % ---- FONTS, SYMBOLS, LANGUAGES, TABLES ----
 \usepackage[utf8]{inputenc}
+\usepackage{soul}  % underlining, highlighting, strikethrough, etc.
 \usepackage{enumerate}  % Custom numbered items, such as steps 1, 2, etc.
 \usepackage{enumitem}  % Ordinals
 \usepackage{moreenum}
