add - xcolor dvipsnames

--- a/article/preamble.tex
+++ b/article/preamble.tex
@@ -1,5 +1,5 @@
 % ---- GRAPHICS AND GEOMETRY ----
-\usepackage[table,xcdraw]{xcolor}
+\usepackage[table,xcdraw,dvipsnames]{xcolor}
 \usepackage{graphicx}
 \usepackage{tikz}
 \usetikzlibrary{
